Add Database Connection String in appsetting.json file to setup Entity Framework

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionString": {
+    "MakeCartDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=[MakeCart];TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
