--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "ConnectionString": {
-    "MakeCartDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=[MakeCart];TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
+  "ConnectionStrings": {
+    "MakeCartDbConnectionString": "Server=(localdb)\\mssqllocaldb;Database=MakeCart;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
   "Serilog": {
     "MinimumLevel": {
